<resources>
    <string name="app_name">ProjectO</string>
    <string name="help">Help</string>
    <string name="help_des">Help</string>
    <string name="snackbar_msg">this is hint msg.</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="greeting_msg">Hey Admin,\n Welcome to home screen</string>
    <string-array name="pass_status">
        <item>Your Pass %s</item>
        <item>Your Pass Valid Upto %s </item>

    </string-array>
    <string name="get_pass_btn_text">Get Pass</string>
    <string name="code_share_title">
        Here is your code now share and enjoy
    </string>
    <string name="random_code">345678</string>
    <string name="code_info">
        This code update in
        every 30:00 min
    </string>
    <string name="refresh_btn">Refresh</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="redeem">Redeem</string>
    <string name="redeem_title">Get redeem your Invitation code</string>
    <string name="get_redeem">Get Redeem</string>
    <string name="redeem_hint">Enter Redeem Code</string>
    <string name="update_info">Get update your profile info</string>
    <string name="update_btn">Update</string>
    <string name="verify_otp">Get verify your otp</string>
    <string name="verify_btn">Verify</string>
    <string name="phone_hint">Enter Mobile No.</string>
    <string name="otp_hint">Enter Otp</string>
    <string name="passUse">Use Pass</string>
    <string name="back">Back</string>
    <string name="invitation_msg">Get redeem your invitation code</string>
    <string name="dog_park">Stray-friendly park campaign</string>
    <string name="continueBtn">Continue</string>
    <string name="login_msg">Login or SignUp</string>
    <string name="countryCode">+91</string>
    <string name="otpSubtitle">Enter the OTP sent to %s</string>
    <string name="resend_code">Resend Code</string>
    <string name="otp_placeholder">000000</string>
    <string name="title_activity_otp">OtpActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="htu">How to Use</string>
    <string name="htu_A">Scan the QR code</string>
    <string name="htu_B">Now! Enjoy your happiest moment</string>
    <string name="ok">Ok</string>
    <string name="hi">👋 Hi</string>
    <string name="notification">notification</string>
    <string name="donate">donate</string>
    <string name="hint_state">This view show the status about current activity.</string>
    <string-array name="activityStatus">
        <item>No running activity found</item>
        <item>One activity found running</item>
    </string-array>

    <string-array name="spinner">
        <item>morning</item>
        <item>Evening</item>
    </string-array>

    <string-array name="slots">
        <item>07:00am to 12:00am (morning)</item>
        <item>04:00pm to 07:00pm (Evening)</item>
    </string-array>

    <string name="sponsor_info"> %s sponsor food may discontinue in future pls sponsor him/her</string>
    <string name="donate_msg">Donate Rs %f1</string>
    <string name="cart_post_info">You sponsor %s meal for %s</string>
    <string name="confirmation_info">Thank you for sponsoring the meal on %s. One of our executives will contact you shortly to complete the payment process. </string>
    <string name="cart_Info">You sponsor food for %s (a Dog) whose owner name %s for the date %s</string>
</resources>