<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/help"
        android:icon="@drawable/outline_help_center_24"
        android:title="@string/help"
        android:contentDescription=""
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/alert"
        android:icon="@drawable/outline_notifications_24"
        android:title="@string/notification"
        android:contentDescription=""
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/donate"
        android:icon="@drawable/outline_volunteer_activism_24"
        android:title="@string/donate"
        android:contentDescription=""
        app:showAsAction="ifRoom"/>
</menu>