<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background_paws"
        android:layout_above="@id/title"
        />
    
    <ImageView
    android:id="@+id/logo"
    android:layout_width="150dp"
    android:layout_height="150dp"
    android:src="@drawable/logo"
    android:layout_above="@id/title"
    android:layout_alignParentEnd="true"
    android:layout_alignParentStart="true"
    />

    <TextView
        android:id="@+id/title"
        style="@style/bold_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/subtitle"
        android:fontFamily="@font/inriasans_bold"
        android:text="@string/dog_park"
        android:textAlignment="center"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/text_style"
        android:text="@string/login_msg"
        android:textAlignment="center"
        android:textStyle="normal"
        android:layout_above="@id/phoneInput"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/continueBtn"
        android:hint="@string/phone_hint"
        android:padding="20dp"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/continueBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/btn_style"
        android:text="@string/continueBtn"
        android:layout_alignParentBottom="true"
        />


</RelativeLayout>