<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConditionAScreen">


    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/htu"
        style="@style/bold_style"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        />

    <TextView
        android:id="@+id/subTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/htu_A"
        style="@style/text_style"
        android:layout_below="@id/title"
        android:textAlignment="center"
        />

    <ImageView
        android:id="@+id/hero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/tutorial_1"
        android:layout_below="@id/subTitle"
        android:layout_above="@id/nxt"
        android:scaleType="centerInside"
        />

    <Button
        android:id="@+id/nxt"
        style="@style/btn_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/next" />

</RelativeLayout>